# nanopng

./: .gitignore  DEPLOYMENT.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: wasm-build.yml
app/: globals.css  layout.tsx  page.tsx
app/actions/: compress-image.ts  create-zip.ts
components/: before-after-slider.tsx  compression-result-card.tsx  export-button.tsx  format-converter.tsx  image-analyzer.tsx  image-upload-zone.tsx  jelly-squeeze.tsx  logo.tsx  schema-markup.tsx  theme-toggle.tsx
components/editor/: action-bar.tsx  advanced-settings.tsx  editor-context.tsx  editor-layout.tsx  image-grid.tsx  image-preview.tsx  index.ts  preset-selector.tsx  quality-preview.tsx  settings-panel.tsx  upload-panel.tsx  use-marquee-select.ts
components/ui/: button.tsx  card.tsx  jelly-shader.tsx  progress.tsx  radio-group.tsx  setting-hint.tsx
crate/: Cargo.toml
crate/.cargo/: config.toml
crate/src/: filters.rs  lib.rs  resize.rs  transform.rs
crate/src/codecs/: avif.rs  bmp.rs  gif.rs  jpeg.rs  jxl.rs  mod.rs  png.rs  tiff.rs  webp.rs
docs/plans/: 2026-01-21-smart-compression-design.md  2026-01-21-smart-compression-fixes-design.md  2026-01-21-smart-compression-fixes-implementation.md  2026-01-21-smart-compression-implementation.md
lib/: advanced-image-processor.ts  analytics.ts  browser-image-processor.ts  color-quantization.ts  floyd-steinberg.ts  image-processor.ts
lib/codecs/: webp-encoder.ts
lib/core/: color-quantization.ts  floyd-steinberg.ts  format-capabilities.ts  format-decoder.ts  image-analyzer.ts  metadata.ts
lib/hooks/: useWorkerPool.ts
lib/services/: compression-orchestrator.ts  image-service.ts  svg-service.ts
lib/types/: compression.ts  presets.ts  svg.ts
lib/utils/: wasm-loader.ts
scripts/: prepare-wasm.mjs
styles/: globals.css
types/: declarations.d.ts  image.ts  upng.d.ts
(+18 files in other folders)
