[package]
name = "nanopng-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# JPEG (pure Rust - Wasm compatible)
jpeg-encoder = "0.6"

# PNG (pure Rust - Wasm compatible)
png = "0.17"
imagequant = "4.0"
rgb = "0.8"

# AVIF (pure Rust)
ravif = { version = "0.11", default-features = false }

# WebP (pure Rust - Wasm compatible, lossless only)
image-webp = "0.2"

# Resizing (pure Rust)
fast_image_resize = { version = "4.0", default-features = false }

# Compression (pure Rust)
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
